--- a/httpd/Dockerfile
+++ b/httpd/Dockerfile
@@ -4,9 +4,9 @@ MAINTAINER G4
 
 RUN yum -y install httpd
 
-COPY conffile /etc/httpd/conf/
+COPY ./conffile /etc/httpd/conf/
 
-COPY documentroot  /var/www/html/
+COPY ./documentroot/*  /var/www/html/
 
 CMD ["-D", "FOREGROUND"]
 
