--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -8,4 +8,6 @@ COPY server.xml /usr/share/tomcat/conf/server.xml
 
 CMD ["catalina.sh", "run"]
 
+ENTRYPOINT ["/usr/libexec/tomcat/server start"]
+
 EXPOSE 8080
