--- a/playbooks/deploy.yml
+++ b/playbooks/deploy.yml
@@ -49,7 +49,7 @@
 
     - name: Run docker image
       docker_container:
-        name: "{{ name }}"
+        name: "{{ container_name }}"
         image: "{{ image }}"
         pull: true
         state: started
